Chrome 18 fails html5test.com XHR Blob response test https://bugs.webkit.org/show_bug.cgi?id=76760

Reviewed by Adam Barth.

Source/WebCore:

Most of the code was already there, this just fixes the FIXME
which was causing this feature not to work.  Chromium already
had this #ifdef enabled, but other ports (at least Mac) do not.

Test: fast/files/xhr-response-blob.html

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::didFinishLoading):

LayoutTests:

* fast/files/script-tests/xhr-response-blob.js: Added.
(xhr.onreadystatechange):
* fast/files/xhr-response-blob-expected.txt: Added.
* fast/files/xhr-response-blob.html: Added.
* platform/chromium/fast/files/xhr-response-blob-expected.txt: Added.

Canonical link: https://commits.webkit.org/97309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109635 268f45cc-cd09-0410-ab3c-d52691b4dbfc